<resources>
    <string name="app_name">Analysis Journal</string>
    <string name="add_result_button">Add result</string>
    <string name="analyses_name">Analyses name</string>
    <string name="analyses_result">Analyses result</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
</resources>
